# base-azqueuemanager-template

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
azqueuemanager_<extension_name>/: __init__.py
